# My_Recorder

./: .gitignore  ADVANCED_OPTIMIZATION_COMPLETE.md  ANDROID_APP_ENHANCEMENTS_SUMMARY.md  BUILD_VALIDATION_COMPREHENSIVE.md  BUILD_VALIDATION_GUIDE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_SUMMARY.md  FINAL_BUILD_VALIDATION_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  METADATA_IMPLEMENTATION_SUMMARY.md  MODERNIZED_PLAYBACK_IMPLEMENTATION_SUMMARY.md  MyApp_dynamic_init.patch  OPTIMIZATION_COMPLETE_REPORT.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_USAGE_GUIDE.md  PERMISSION_IMPLEMENTATION_GUIDE.md  PROJECT_OPTIMIZATION_REPORT.md  README.md  README_Optimization_Implementation.md  REFACTORING_IMPLEMENTATION_GUIDE.md  SPINNER_ENHANCEMENTS_README.md  SplashActivity.backup  TEST_COMPILATION_RESULTS.md  THREAD_SAFETY_AND_ANR_IMPROVEMENTS.md  THREAD_SAFETY_AND_CRASH_PREVENTION_SUMMARY.md  analyze_and_optimize.py  analyze_braces.py  build.gradle  build_and_test.sh  build_app.sh  code.rtf  constants.gradle  final_fixes.sh  fix_all_errors.sh  fix_crashlogger.sh  fix_infinite_loop.py  fix_initialize.py  (+11 more)
CheckMateModule/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh
Documentation/: Checkmate_HttpServer.docx  Checkmate_HttpServer.json  Implementation_Summary.md  SharedEglManager_Usage.md
MagiskModule/: build.sh  cleanup.sh
app/: LibUtils.java  PERMISSION_IMPLEMENTATION_GUIDE.md  build.gradle  build_temp.gradle  google-services.json  (+1 more)
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
(+621 files in other folders)
